force-app/main/default/objects/Banner__mdt/Banner__mdt.object-meta.xml
<CustomObject>
    <label>Banner</label>
    <pluralLabel>Banners</pluralLabel>
</CustomObject>