force-app/main/default/objects/Banner__mdt/fields/Banner_Condition__c.field-meta.xml
<CustomField>
    <fullName>Banner_Condition__c</fullName>
    <inlineHelpText>Use includes rather than contains</inlineHelpText>
    <label>Banner Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>