force-app/main/default/objects/Banner__mdt/fields/Banner_Message__c.field-meta.xml
<CustomField>
    <fullName>Banner_Message__c</fullName>
    <label>Banner Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>