force-app/main/default/objects/Banner__mdt/fields/Banner_Setting__c.field-meta.xml
<CustomField>
    <fullName>Banner_Setting__c</fullName>
    <label>Banner Setting</label>
    <referenceTo>Banner_Setting__mdt</referenceTo>
    <relationshipLabel>Banners</relationshipLabel>
    <relationshipName>Banners</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>