force-app/main/default/objects/Banner__mdt/fields/Banner_Type__c.field-meta.xml
<CustomField>
    <fullName>Banner_Type__c</fullName>
    <label>Banner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>